<resources>
    <string name="app_name">Weton Calculator</string>
    <string name="name">Masukkan Namamu</string>
    <string name="title">KALKULATOR WETON</string>
    <string name="nama">Nama</string>
    <string name="harimasehi">Masukkan Hari Masehi</string>
    <string name="harim">Hari Lahir Masehi</string>
    <string name="nama_pasangan">Nama Pasangan</string>
    <string name="pasaran_jawa">Hari Lahir Jawa</string>
    <string name="hitung">Hitung</string>
    <string name="copyright">Created By Fajar</string>
    <string name="namapasangan">Masukkan Nama pasangamu</string>
    <string name="result_ok">Hai %1$s! Kamu dan %2$s cocok, karena </string>
    <string name="result_semi">Hai %1$s! Kamu dan %2$s kurang cocok, karena </string>
    <string name="result_ng">Hai %1$s! Kamu dan %2$s tidak cocok, karena </string>

    <string name="tinari">
        Hasilnya TINARI. Artinya kalian akan gampang menemukan kebahagiaan, gampang dalam mencari rezeki
        dan tidak sampai hidup dalam kekurangan. Kehidupan kalian akan mendapat banyak keberuntungan.
    </string>
    <string name="topo">
        Hasilnya TOPO. Artinya dalam membina rumah tangga akan banyak mengalami kesusahan di awal-awal.
        Bisa saja masalah ekonomi dsb. Namun, ketika sudah memiliki anak dan cukup lama berumah tangga, akhirnya akan hidup
        sukses dan bahagia.
    </string>
    <string name="ratu">
        Hasilnya RATU. Artinya, memang pasanganmu saat ini memang sudah jodohnya. Dihargai dan disegani
        oleh lingkungan sekitar. Bahkan banyak yang iri akan keharmonisan rumah tangga kalian.
    </string>
    <string name="jodoh">
        Hasilnya JODOH. Artinya, kalian memang beneran cocok dan berjodoh. Bisa saling menerima segala kelebihan dan kekurangan
        masing-masing. Rumah tangga rukun sampai tua.
    </string>
    <string name="pegat">
        Hasilnya PEGAT. Artinya, kemungkinan kalian akan menemukan banyak masalah dikemudian hari, bisa dari masalah ekonomi, kekuasaan
        atau bahkan perselingkuhan yg bisa menyebabkan perceraian.
    </string>
    <string name="padu">
        Hasilnya PADU. Artinya, rumah tangga kalian akan banyak mengalami pertengkaran. meskipun begitu, tidak akan membawa kepada perceraian.
        Masalah pertengkaran tersebut bahkan bisa  dipicu oleh hal-hal yg cukup sepele.
    </string>
    <string name="sujanan">
        Hasilnya SUJANAN. Artinya, dalam berunah tangga nantinya akan banyak mengalami pertengkaran dan masalah perselingkuhan. Bisa dari pihak
        laki-laki atau perempuan yg memulai perceraian.
    </string>
    <string name="pesthi">
        Hasilnya PESTHI. Artinya, akan rukun dalam berumah tangga, tenteram, adem ayem sampai tua. Meskipun ada masalah, tetapi tidak akan
        merusak keharmonisan keluarga.
    </string>

    <string-array name="spinnerday">
        <item>Selasa</item>
        <item>Senin</item>
        <item>Minggu</item>
        <item>Jumat</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Sabtu</item>
    </string-array>

    <string-array name="spinner_pasaran">
        <item>Wage</item>
        <item>Legi/manis</item>
        <item>JANGAN DIPILIH</item>
        <item>Pon</item>
        <item>Kliwon</item>
        <item>Pahing</item>
    </string-array>
    <string name="title_activity_navigation">Kalkulator Weton</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
